fix share spacing for large numbers

--- a/ui/css/article-2019.css
+++ b/ui/css/article-2019.css
@@ -1,4 +1,5 @@
-/* ==========================================================================
+/* 
+==========================================================================
    #BASE (Global) (This mostly applies to the Atoms)
    ========================================================================== */
 
@@ -2123,7 +2124,7 @@ margin: 0;
     }
 
     .tool-bar .count {
-      width: 35px;
+      width: 46px;
       height: 40px;
 
     }
